# EventVPR

./: .gitignore  Makefile  README.md  batch_trainer.sh  brisbane_map_plots.ipynb  convertToVideo.py  correlation_matrix_clean.ipynb  event_learner.py  eventvpr.py  get_corresponding_events.ipynb  nmea_reader.py  pyproject.toml  read_file_test.py  sparse_events_brisbane_custom.ipynb  train_ce.sh  train_triplet.sh  train_vpr_encoder.py  triplet_cosine_loss.py  triplet_training.py  upload_wandb_logs.sh  vpr_encoder.py
deep_models/: 2d_spiking_encoder.py  constant_paths.py  efficient_dataset.py  efficient_trainer  hard_mining_training.py  model.py  mono_traverse_hard_training.py  resblock.py  spiking_encoder.py  stateful_vpr.py  train_ce_model.py  train_vpr_encoder.py  training_datasets.py  triplet_cosine_loss.py  triplet_mining.py  triplet_training.py  vpr_encoder.py
notebooks/: constant_paths.py  correlation_matrix_clean.ipynb  get_corresponding_events.ipynb  new_extraction.ipynb  proper_extraction.ipynb
sp_layers/: inhibition_layer.py
spikej_mods/: inhibition_layer.py
stdp/: stdp_backprop_sl.py
utils/: compare_embeddings.py  convert_npy_txt.py  data_augmentation.py  event_readers.py  gps_utils.py  maximise_correlation.py  recalltw.py  spike_synchrony.py  visualisation.py  voxel_representation.py
